[gd_scene load_steps=21 format=4 uid="uid://dm6fum3y14op8"]

[ext_resource type="Script" path="res://world/game/scripts/stage.gd" id="1_tc3wc"]
[ext_resource type="PackedScene" uid="uid://c2td8hv4f264o" path="res://interface/runtime/misc/gameplay_ui.tscn" id="2_raxbt"]
[ext_resource type="PackedScene" uid="uid://brxyd2eqdblj4" path="res://object/game/game_cam.tscn" id="3_jn2vr"]
[ext_resource type="PackedScene" uid="uid://cedpkr87ujyh1" path="res://world/components/level_world.tscn" id="4_53g33"]
[ext_resource type="Texture2D" uid="uid://b0kqtj21y0y7f" path="res://core/resources/visuals/gradient_stage_checkboard_shadow.tres" id="5_adwev"]
[ext_resource type="Script" path="res://world/world/stage_light.gd" id="6_x5qq2"]
[ext_resource type="Script" path="res://world/containers/container_tilemaps.gd" id="7_xl1j1"]
[ext_resource type="TileSet" uid="uid://dsk4kuh8k4bve" path="res://core/resources/tileset/tileset_world_02.tres" id="8_0wmn2"]
[ext_resource type="Script" path="res://world/containers/container_level_object.gd" id="9_dwo2k"]
[ext_resource type="PackedScene" uid="uid://dmfiavy81h85b" path="res://world/interface/stage_info.tscn" id="9_plfjy"]
[ext_resource type="Script" path="res://object/scripts/node_body.gd" id="10_1pas6"]
[ext_resource type="Texture2D" uid="uid://dhbynujoii8rm" path="res://core/resources/visuals/gradient_stage_background_dimmer.tres" id="10_pce1g"]
[ext_resource type="PackedScene" uid="uid://dbvbelcosunmx" path="res://object/objects/obj_block.tscn" id="11_rkhok"]
[ext_resource type="PackedScene" uid="uid://8xo052jhkfuk" path="res://object/objects/obj_button.tscn" id="12_7ub5p"]
[ext_resource type="PackedScene" uid="uid://dc3cprf4ks4be" path="res://object/objects/obj_starpoint.tscn" id="13_rwbwo"]
[ext_resource type="Script" path="res://object/scripts/game/container_endpoints.gd" id="15_80j7c"]
[ext_resource type="Script" path="res://object/scripts/node_switch_blocks.gd" id="15_b6mhd"]
[ext_resource type="Script" path="res://object/scripts/components/component_bokobody_animation.gd" id="16_0p2r2"]
[ext_resource type="PackedScene" uid="uid://18nk25lcwcc7" path="res://object/objects/obj_switch_block.tscn" id="16_avsvt"]
[ext_resource type="PackedScene" uid="uid://bp0yxas1oob3e" path="res://object/objects/obj_sleeping_block.tscn" id="17_0uv5v"]

[node name="S" type="Node2D"]
script = ExtResource("1_tc3wc")
stage_progression = false

[node name="UI" parent="." instance=ExtResource("2_raxbt")]

[node name="Cam" parent="." instance=ExtResource("3_jn2vr")]
position = Vector2(494, 337)
zoom = Vector2(1.35, 1.35)

[node name="SW" parent="." instance=ExtResource("4_53g33")]
randomize_background_effect = false
background_effect = 1
background_color = 2
background_dim = 0.5

[node name="Sprite2D" type="Sprite2D" parent="SW"]
position = Vector2(494.5, 315.5)
scale = Vector2(10.5469, 10.5469)
texture = ExtResource("10_pce1g")

[node name="StageLight" type="PointLight2D" parent="SW"]
position = Vector2(495.5, 338)
scale = Vector2(6.32812, 9.84375)
range_item_cull_mask = 2
texture = ExtResource("5_adwev")
script = ExtResource("6_x5qq2")

[node name="TM" type="Node2D" parent="SW"]
scale = Vector2(0.5, 0.5)
script = ExtResource("7_xl1j1")

[node name="Collision" type="TileMapLayer" parent="SW/TM"]
tile_map_data = PackedByteArray("AAAIAAUAAQAAAAQAAAAJAAIAAQAAAAQAAAAKAAIAAQAAAAQAAAALAAIAAQAAAAQAAAAMAAIAAQAAAAQAAAAIAAYAAQAAAAQAAAAGAAgAAQAAAAQAAAANAAgAAQAAAAQAAAAOAAgAAQAAAAQAAAAPAAgAAQAAAAQAAAAPAAMAAQAAAAQAAAAGAAkAAQAAAAQAAAAIAAcAAQAAAAQAAAAPAAsAAQAAAAQAAAAOAAsAAQAAAAQAAAANAAsAAQAAAAQAAAAIAAsAAQAAAAQAAAAIAAoAAQAAAAQAAAAIAAkAAQAAAAQAAAAHAAkAAQAAAAQAAAAGAAcAAQAAAAQAAAAHAAcAAQAAAAQAAAAIAAwAAQAAAAQAAAAHAAUAAQAAAAQAAAAHAAIAAQAAAAQAAAAIAAIAAQAAAAQAAAAGAAUAAQAAAAQAAAAGAAQAAQAAAAQAAAAGAAMAAQAAAAQAAAAGAAIAAQAAAAQAAAAIAA0AAQAAAAQAAAAJAA0AAQAAAAQAAAAKAA0AAQAAAAQAAAALAA0AAQAAAAQAAAAMAA0AAQAAAAQAAAAQAAsAAQAAAAQAAAAQAAgAAQAAAAQAAAANAAYAAQAAAAQAAAAOAAYAAQAAAAQAAAAPAAYAAQAAAAQAAAAOAAMAAQAAAAQAAAANAAMAAQAAAAQAAAANAAcAAQAAAAQAAAAQAAYAAQAAAAQAAAAQAAUAAQAAAAQAAAAQAAQAAQAAAAQAAAAQAAMAAQAAAAQAAAARAAgAAQAAAAQAAAARAAkAAQAAAAQAAAARAAoAAQAAAAQAAAARAAsAAQAAAAQAAAANAAIAAQAAAAQAAAANAAwAAQAAAAQAAAANAA0AAQAAAAQAAAA=")
tile_set = ExtResource("8_0wmn2")

[node name="Checkerboard" type="TileMapLayer" parent="SW/TM"]
self_modulate = Color(0.769231, 0.769231, 0.769231, 1)
light_mask = 2
tile_map_data = PackedByteArray("AAAHAAMABwAAAAAAAAAHAAQABwAAAAEAAAAIAAMABwABAAAAAAAIAAQABwABAAEAAAAJAAMABwACAAAAAAAJAAQABwACAAEAAAAJAAUABwACAAIAAAAJAAYABwACAAMAAAAKAAMABwADAAAAAAAKAAQABwADAAEAAAAKAAUABwADAAIAAAAKAAYABwADAAMAAAALAAQABwAAAAEAAAALAAUABwAAAAIAAAALAAYABwAAAAMAAAAMAAQABwABAAEAAAAMAAUABwABAAIAAAANAAQABwACAAEAAAANAAUABwACAAIAAAAOAAQABwADAAEAAAAOAAUABwADAAIAAAALAAcABwAAAAAAAAALAAgABwAAAAEAAAALAAkABwAAAAIAAAALAAoABwAAAAMAAAAMAAkABwABAAIAAAAMAAoABwABAAMAAAANAAkABwACAAIAAAANAAoABwACAAMAAAAOAAkABwADAAIAAAAOAAoABwADAAMAAAAHAAgABwAAAAEAAAAIAAgABwABAAEAAAAJAAcABwACAAAAAAAJAAgABwACAAEAAAAJAAkABwACAAIAAAAJAAoABwACAAMAAAAKAAcABwADAAAAAAAKAAgABwADAAEAAAAKAAkABwADAAIAAAAKAAoABwADAAMAAAAJAAsABwACAAAAAAAJAAwABwACAAEAAAAKAAsABwADAAAAAAAKAAwABwADAAEAAAALAAsABwAAAAAAAAALAAwABwAAAAEAAAAPAAkABwAAAAAAAAAPAAoABwAAAAEAAAALAAMABwAAAAAAAAAJAP//BwAAAAAAAAAJAAAABwAAAAEAAAAJAAEABwAAAAIAAAAJAAIABwAAAAMAAAAKAP//BwABAAAAAAAKAAAABwABAAEAAAAKAAEABwABAAIAAAAKAAIABwABAAMAAAALAP//BwACAAAAAAALAAAABwACAAEAAAALAAEABwACAAIAAAALAAIABwACAAMAAAAJAA0ABwAAAAAAAAAJAA4ABwAAAAEAAAAJAA8ABwAAAAIAAAAJABAABwAAAAMAAAAKAA0ABwABAAAAAAAKAA4ABwABAAEAAAAKAA8ABwABAAIAAAAKABAABwABAAMAAAALAA0ABwACAAAAAAALAA4ABwACAAEAAAALAA8ABwACAAIAAAALABAABwACAAMAAAAMAAYABwAAAAAAAAAMAAcABwAAAAEAAAAMAAIABwAAAAAAAAAMAAMABwAAAAEAAAAPAAQABwABAAAAAAAPAAUABwABAAEAAAAMAAgABwACAAAAAAAQAAkABwABAAAAAAAQAAoABwABAAEAAAAMAAsABwABAAAAAAAMAAwABwABAAEAAAAMAA0ABwABAAAAAAAMAA4ABwABAAEAAAAMAA8ABwABAAAAAAAMABAABwABAAEAAAAMAAAABwADAAEAAAAMAAEABwADAAIAAAA=")
tile_set = ExtResource("8_0wmn2")

[node name="Outline" type="TileMapLayer" parent="SW/TM"]
tile_map_data = PackedByteArray("AAAIABEAAQALAAMAAAAIABAAAQALAAIAAAAIAA8AAQALAAIAAAAIAA4AAQALAAIAAAAIAA0AAQALAAIAAAAIAAwAAQALAAIAAAAIAAsAAQALAAIAAAAIAAoAAQALAAIAAAAIAAkAAQALAAAAAAAHAAkAAQAKAAAAAAAGAAkAAQAGAAEAAAAGAAgAAQALAAIAAAAGAAcAAQAGAAIAAAAHAAcAAQAJAAMAAAAIAAcAAQALAAMAAAAIAAYAAQALAAIAAAAIAAUAAQALAAAAAAAHAAUAAQAKAAAAAAAGAAUAAQAGAAEAAAAGAAQAAQALAAIAAAAGAAMAAQALAAIAAAAGAAIAAQAGAAIAAAAHAAIAAQAJAAMAAAAIAAIAAQALAAMAAAAIAAEAAQALAAIAAAAIAAAAAQALAAIAAAAIAP//AQALAAAAAAANAP//AQAIAAAAAAANAAAAAQAIAAEAAAANAAEAAQAIAAEAAAANAAIAAQAIAAEAAAANAAMAAQAIAAMAAAAOAAMAAQAJAAMAAAAPAAMAAQAJAAMAAAAQAAMAAQAFAAIAAAAQAAQAAQAIAAEAAAAQAAUAAQAIAAEAAAAQAAYAAQAFAAEAAAAPAAYAAQAKAAAAAAAOAAYAAQAKAAAAAAANAAYAAQAIAAAAAAANAAcAAQAIAAEAAAANAAgAAQAIAAMAAAAOAAgAAQAJAAMAAAAPAAgAAQAJAAMAAAAQAAgAAQAJAAMAAAARAAgAAQAFAAIAAAARAAkAAQAIAAEAAAARAAoAAQAIAAEAAAARAAsAAQAFAAEAAAAQAAsAAQAKAAAAAAAPAAsAAQAKAAAAAAAOAAsAAQAKAAAAAAANAAwAAQAIAAEAAAANAAsAAQAIAAAAAAANAA0AAQAIAAEAAAANAA4AAQAIAAEAAAANAA8AAQAIAAEAAAANABAAAQAIAAEAAAANABEAAQAIAAMAAAAHABEAAQAGAAIAAAAHABAAAQAJAAIAAAAHAA8AAQAJAAIAAAAHAA4AAQAJAAIAAAAHAA0AAQAJAAIAAAAHAAwAAQAJAAIAAAAHAAsAAQAJAAIAAAAHAAoAAQAJAAIAAAAGAAoAAQAJAAIAAAAGAAsAAQAJAAIAAAAFAAsAAQAJAAIAAAAFAAoAAQAJAAIAAAAFAAkAAQAJAAIAAAAFAAgAAQAJAAIAAAAFAAcAAQAJAAIAAAAFAAYAAQAJAAIAAAAGAAYAAQAJAAIAAAAHAAYAAQAJAAIAAAAFAAUAAQAJAAIAAAAFAAQAAQAJAAIAAAAFAAMAAQAJAAIAAAAFAAIAAQAJAAIAAAAFAAEAAQAJAAIAAAAGAAEAAQAJAAIAAAAHAAEAAQAJAAIAAAAHAAAAAQAJAAIAAAAHAP//AQAGAAEAAAAHAP7/AQAJAAIAAAAOABEAAQAJAAIAAAAOABAAAQAJAAIAAAAOAA8AAQAJAAIAAAAOAA4AAQAJAAIAAAAOAA0AAQAJAAIAAAAOAAwAAQAJAAIAAAAPAAwAAQAJAAIAAAAQAAwAAQAJAAIAAAARAAwAAQAJAAIAAAASAAwAAQAJAAIAAAASAAsAAQAJAAIAAAASAAoAAQAJAAIAAAASAAkAAQAJAAIAAAASAAgAAQAJAAIAAAASAAcAAQAJAAIAAAARAAcAAQAJAAIAAAAQAAcAAQAJAAIAAAAPAAcAAQAJAAIAAAAOAAcAAQAJAAIAAAARAAYAAQAJAAIAAAARAAUAAQAJAAIAAAARAAQAAQAJAAIAAAARAAMAAQAJAAIAAAARAAIAAQAJAAIAAAAQAAIAAQAJAAIAAAAPAAIAAQAJAAIAAAAOAAIAAQAJAAIAAAAOAAEAAQAJAAIAAAAOAAAAAQAJAAIAAAAOAP//AQAJAAIAAAAOAP7/AQAJAAIAAAA=")
tile_set = ExtResource("8_0wmn2")

[node name="ChibiBoko" parent="SW" instance=ExtResource("9_plfjy")]
position = Vector2(653, 337)
info_text = "Buttons,
 Try 'em"

[node name="SO" type="Node2D" parent="."]
script = ExtResource("9_dwo2k")

[node name="Endpoints" type="Node2D" parent="SO"]
script = ExtResource("15_80j7c")

[node name="Starpoint" parent="SO/Endpoints" instance=ExtResource("13_rwbwo")]
position = Vector2(743, 428)
what_im_happy_with = 1

[node name="Starpoint2" parent="SO/Endpoints" instance=ExtResource("13_rwbwo")]
position = Vector2(743, 473)
what_im_happy_with = 1

[node name="Starpoint3" parent="SO/Endpoints" instance=ExtResource("13_rwbwo")]
position = Vector2(653, 203)

[node name="Starpoint4" parent="SO/Endpoints" instance=ExtResource("13_rwbwo")]
position = Vector2(653, 248)

[node name="Button" parent="SO" node_paths=PackedStringArray("switch_blockss_to_trigger") instance=ExtResource("12_7ub5p")]
position = Vector2(383, 383)
switch_blockss_to_trigger = [NodePath("../SwitchBlocks")]

[node name="Button2" parent="SO" node_paths=PackedStringArray("switch_blockss_to_trigger") instance=ExtResource("12_7ub5p")]
position = Vector2(383, 203)
switch_blockss_to_trigger = [NodePath("../SwitchBlocks2")]
switch_type_decorator = 1

[node name="SwitchBlocks" type="Area2D" parent="SO"]
position = Vector2(473, 293)
collision_layer = 15
collision_mask = 15
script = ExtResource("15_b6mhd")

[node name="SwitchBlock" parent="SO/SwitchBlocks" instance=ExtResource("16_avsvt")]
position = Vector2(-45, 0)

[node name="SwitchBlock2" parent="SO/SwitchBlocks" instance=ExtResource("16_avsvt")]

[node name="SwitchBlock3" parent="SO/SwitchBlocks" instance=ExtResource("16_avsvt")]
position = Vector2(45, 0)

[node name="SwitchBlock4" parent="SO/SwitchBlocks" instance=ExtResource("16_avsvt")]
position = Vector2(90, 0)

[node name="SwitchBlocks2" type="Area2D" parent="SO"]
position = Vector2(653, 428)
collision_layer = 15
collision_mask = 15
script = ExtResource("15_b6mhd")
switch_type_decorator = 1

[node name="SwitchBlock" parent="SO/SwitchBlocks2" instance=ExtResource("16_avsvt")]
position = Vector2(0, 45)

[node name="SwitchBlock2" parent="SO/SwitchBlocks2" instance=ExtResource("16_avsvt")]

[node name="Bokobody" type="Node2D" parent="SO"]
position = Vector2(563, 428)
script = ExtResource("10_1pas6")
turning_strength = -1

[node name="Block2" parent="SO/Bokobody" instance=ExtResource("11_rkhok")]
boko_color = 1

[node name="Block3" parent="SO/Bokobody" instance=ExtResource("11_rkhok")]
position = Vector2(0, 45)
boko_color = 1

[node name="BokobodyAnimationComponent" type="Node" parent="SO/Bokobody"]
script = ExtResource("16_0p2r2")

[node name="Bokobody2" type="Node2D" parent="SO"]
position = Vector2(428, 473)
script = ExtResource("10_1pas6")

[node name="Block" parent="SO/Bokobody2" instance=ExtResource("11_rkhok")]

[node name="Block3" parent="SO/Bokobody2" instance=ExtResource("11_rkhok")]
position = Vector2(0, 45)

[node name="BokobodyAnimationComponent2" type="Node" parent="SO/Bokobody2"]
script = ExtResource("16_0p2r2")

[node name="SleepingBlock" parent="SO" instance=ExtResource("17_0uv5v")]
position = Vector2(428, 158)

[node name="SleepingBlock2" parent="SO" instance=ExtResource("17_0uv5v")]
position = Vector2(563, 563)
